enhanced-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bms-service
  labels:
    app: bms
spec:
  type: LoadBalancer  # Changed to LoadBalancer for AWS
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: metrics
  selector:
    app: bms
