ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bookmyshow.yourdomain.com
    secretName: bms-tls
  rules:
  - host: bookmyshow.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bms-service
            port:
              number: 80
